# sap-streamlit-app-sample

./: .gitignore  Dockerfile  README.md  pyproject.toml
.streamlit/: config.toml
app/: top.py
app/pages/: read_table.py  user_list.py
