[tool.poetry]
name = "sap-streamlit-app-sample"
version = "0.1.0"
description = ""
authors = ["yomon8 <sebanngou8@gmail.com>"]
readme = "README.md"
packages = [{include = "sap_streamlit_app_sample"}]

[tool.poetry.dependencies]
python = "^3.9.15"
streamlit = "^1.17.0"
cython = "^0.29.33"
pyrfc = "^2.7.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
